Migrated remaining projects to RC2 Added TestInternalDtosRefOrleans

--- a/src/ClientGenerator/project.json
+++ b/src/ClientGenerator/project.json
@@ -2,14 +2,10 @@
   "version": "1.0.0-*",
   "description": "ClientGenerator Console Application",
   "authors": [ "Gutemberg" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
 
-  "exclude": "Serialization/*.cs",
-
-  "compilationOptions": {
-    "emitEntryPoint": true
+  "buildOptions": {
+    "emitEntryPoint": true,
+    "compile": { "exclude": "Serialization/*.cs" }
   },
 
   "dependencies": {
