--- a/src/OrleansDependencyInjection/project.json
+++ b/src/OrleansDependencyInjection/project.json
@@ -2,18 +2,17 @@
   "version": "1.0.0-*",
   "description": "OrleansDependencyInjection Class Library",
   "authors": [ "Gutemberg" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
 
   "dependencies": {
+    "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final",
     "Orleans": { "target": "project" },
     "OrleansRuntime": { "target": "project" },
-    "Microsoft.Extensions.DependencyInjection": "1.0.0-rc1-final",
-    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc1-final"
   },
 
   "frameworks": {
-    "net451": { }
+    "net451": {
+      "frameworkAssemblies": {"System.Runtime": "4.0.10.0"}
+    }
   }
 }
