--- a/src/Orleans/project.json
+++ b/src/Orleans/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Newtonsoft.Json": "7.0.1",
+    "Sigil": "4.7.0",
     "System.Collections.Immutable": "1.1.36"
   },
   "frameworks": {
