IL-based serializer generator improvements

--- a/src/Orleans/Orleans.csproj
+++ b/src/Orleans/Orleans.csproj
@@ -132,7 +132,8 @@
     <Compile Include="IDs\UniqueKey.cs" />
     <Compile Include="Core\IGrainFactory.cs" />
     <Compile Include="Runtime\IGrainRuntime.cs" />
-    <Compile Include="Serialization\IlBasedSerializer.cs" />
+    <Compile Include="Serialization\IlBasedSerializers.cs" />
+    <Compile Include="Serialization\IlBasedSerializerBuilder.cs" />
     <Compile Include="Serialization\OrleansJsonSerializer.cs" />
     <Compile Include="Serialization\BinaryFormatterSerializer.cs" />
     <Compile Include="Streams\Core\StreamIdentity.cs" />
